--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <p>Выберите, из какого типа данных вы хотите извлечь корень:</p>
         </div>
         <div class="child2ind">
-            <li><a href=real.html>Действительные числа</a></li>
-            <li><a href=complex.html>Комплексные числа</a></li>
-            <li><a href=trinomial.html>Квадратный трёхчлен</a></li>    
+            <li><a href=real_ru.html>Действительные числа</a></li>
+            <li><a href=complex_ru.html>Комплексные числа</a></li>
+            <li><a href=trinomial_ru.html>Квадратный трёхчлен</a></li>    
             
             
         </div>
