--- a/trinomial_ru.html
+++ b/trinomial_ru.html
@@ -71,6 +71,13 @@
                 <div class="hello1">
                     <input type="text" id="precision" name="precision" size="20" style="color: black;"/>
                 </div>
+                            
+                <div class="hello">
+                <label class="container">Арифметический корень (только неотрицательные значения)
+                    <input type="checkbox" id="flag" name="flag">
+                    <span class="checkmark"></span>
+                </label>
+                </div>
 
                 <div class="hello">
                     <button onclick="sqrt_polynom()">Вычислить</button>
@@ -78,9 +85,10 @@
                 <div class="hello2">
                     <p class="name1"></p>  
                 </div>
-            </div>
+        </div>
 
         
+    </div>
     </div>
 
 </body>
