--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <li><a href=complex_ru.html>Комплексные числа</a></li>
                 <li><a href=trinomial_ru.html>Квадратный трёхчлен</a></li>
                 <li><a href=https://docs.google.com/forms/d/e/1FAIpQLSdJyfHhXaNbxXZnf524J2kxXmknXno3lHlIejfztTCb5VkU3g/viewform?usp=sf_link>Обратная связь</a></li>
+                <li><a href=assist_ru.html>Руководство по работе с сайтом</a></li>
+
             </ul>
         </div>
 
