--- a/complex_ru.html
+++ b/complex_ru.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+<!-- Шрифты и стили -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 <link href="style.css" rel="stylesheet" type="text/css" media="all" >
 <script src="complex.js"></script>
@@ -11,6 +12,7 @@
 </head>
 
 <body class="bb">
+    <!-- Оформление меню -->
     <div class="header">
         <input type="checkbox" id="active">
         <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
@@ -25,7 +27,7 @@
 
             </ul>
         </div>
-
+    <!-- Оформление переключения языков -->
     </div>
     <div class="header1">
         <input type="checkbox" id="active1">
@@ -40,7 +42,7 @@
         </div>
     </div>
     <div class="input-win">
-
+    <!-- Ввод значений -->
         <div class="child1">
             <h1 align="center" style="font-family:'BigStem'">Извлечение квадратного корня из комплексного числа</h1>
             <div class="bbl">
@@ -68,6 +70,7 @@
                 <div class="hello">
                     <button onclick="sqrt_complex()">Вычислить</button>
                 </div>
+                <!-- Вывод ответа -->
                 <div class="hello2">
                     <p class="name1"></p>  
                 </div>
