--- a/real_ru.html
+++ b/real_ru.html
@@ -12,6 +12,7 @@
 </head>
 
 <body class="bb">
+    <!-- Оформление меню -->
     <div class="header">
         <input type="checkbox" id="active">
         <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
@@ -26,8 +27,8 @@
 
             </ul>
         </div>
-
     </div>
+    <!-- Оформление переключения языков -->
     <div class="header1">
         <input type="checkbox" id="active1">
         <label for="active1" class="menu-btn1"><i class="fa fa-globe"></i></label>
@@ -43,7 +44,7 @@
     <div class="input-win">
         <div class="child1">
             <h1 align="center" style="font-family:'BigStem'">Извлечение квадратного корня из действительного числа</h1>
-
+            <!-- Ввод данных пользователем -->
             <div class="hello">
                 <label for="data" style="color: black;">Введите действительное число (при вводе вещественного числа используйте знак "." для разделения целой и десятичной части):</label>
             </div>
@@ -67,6 +68,7 @@
             <div class="hello">
                 <button onclick="sqrt_real()">Вычислить</button>
             </div>
+            <!-- Вывод извлеченного корня -->
             <div class="hello2">
                 <p class="name1"></p>  
             </div>
