--- a/trinomial_ru.html
+++ b/trinomial_ru.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+<!-- Шрифты и стили, файл js для обрботки чисел -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 <link href="style.css" rel="stylesheet" type="text/css" media="all" >
 <script src="polynom.js"></script>
@@ -11,6 +12,7 @@
 </head>
 
 <body class="bb">
+    <!-- Оформление меню -->
     <div class="header">
         <input type="checkbox" id="active">
         <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
@@ -27,6 +29,7 @@
         </div>
 
     </div>
+    <!-- Оформление переключения языков -->
     <div class="header1">
         <input type="checkbox" id="active1">
         <label for="active1" class="menu-btn1"><i class="fa fa-globe"></i></label>
@@ -40,7 +43,7 @@
         </div>
     </div>
     <div class="input-win">
-
+    <!-- Ввод данных пользователем -->
         <div class="child1">
             <h1 align="center" style="font-family:'BigStem'">Извлечение квадратного корня из квадратного трехчлена</h1>
 
@@ -84,6 +87,7 @@
                 <div class="hello">
                     <button onclick="sqrt_polynom()">Вычислить</button>
                 </div>
+                <!-- Вывод извлечённого корня -->
                 <div class="hello2">
                     <p class="name1"></p>  
                 </div>
