--- a/assist_ru.html
+++ b/assist_ru.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     
-    <!-- Приветственный текст -->
+    <!-- Текст-пояснение и кнопка для перехода на руководство -->
     <div class="input-win">
         <div class="child1">
             <h1 align="center" style="font-family:'BigStem'">Руководство по работе с сайтом</h1>
