--- a/real_ru.html
+++ b/real_ru.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-<!-- Шрифты и стили -->
+<!-- Шрифты и стили, файл js для извлечения корня -->
 <link href="style.css" rel="stylesheet" type="text/css" media="all" >
 <script src="real.js"></script>
 <title>Действительные числа </title>
